# openvoice

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml  (+1 more)
apps/api/: Dockerfile  Dockerfile.prod  constraints.txt  openapi.json  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_create_users.py  0002_auth_sessions.py  0003_community_domain.py  0004_messages_events.py  0005_message_encryption.py  0006_devices.py  0007_user_profiles.py  0008_message_reactions.py  0009_session_device_binding.py  0010_override_partial_unique.py  0011_replies_pins_topics.py  0012_channel_reads.py  0013_user_custom_status.py
apps/api/src/openvoice_api/: __init__.py  asgi.py  authz.py  config.py  deps.py  device_crypto.py  events.py  export_openapi.py  livekit_tokens.py  logging_setup.py  main.py  metrics.py  models.py  permissions.py  presence.py  rate_limit.py  security.py
apps/api/src/openvoice_api/routers/: auth.py  communities.py  dev_auth.py  devices.py  health.py  invites.py  messages.py  moderation.py  roles.py  users.py  voice.py  ws.py
apps/api/tests/: conftest.py  test_auth.py  test_channel_voice.py  test_communities.py  test_config.py  test_dev_auth.py  test_devices.py  test_health.py  test_invites.py  test_messages.py  test_moderation.py  test_permissions.py  test_reactions.py  test_users.py  test_voice_token.py  test_ws.py
(+95 files in other folders)
